--- a/index.html
+++ b/index.html
@@ -61,19 +61,19 @@
     </tr>
     <tr>
       <td nowrap>Swar-MV1</td>
-      <td><audio controls preload="none"><source src="ss/Swar-MV1/sample1.wav"></audio></td>
-      <td><audio controls preload="none"><source src="ss/Swar-MV1/sample2.wav"></audio></td>
-      <td><audio controls preload="none"><source src="ss/Swar-MV1/sample3.wav"></audio></td>
-      <td><audio controls preload="none"><source src="ss/Swar-MV1/sample4.wav"></audio></td>
-      <td><audio controls preload="none"><source src="ss/Swar-MV1/sample5.wav"></audio></td>
+      <td><audio controls preload="none"><source src="ss/Swar-M(V1)/sample1.wav"></audio></td>
+      <td><audio controls preload="none"><source src="ss/Swar-M(V1)/sample2.wav"></audio></td>
+      <td><audio controls preload="none"><source src="ss/Swar-M(V1)/sample3.wav"></audio></td>
+      <td><audio controls preload="none"><source src="ss/Swar-M(V1)/sample4.wav"></audio></td>
+      <td><audio controls preload="none"><source src="ss/Swar-M(V1)/sample5.wav"></audio></td>
     </tr>
     <tr>
       <td nowrap>Swar-MV2</td>
-      <td><audio controls preload="none"><source src="ss/Swar-MV2/sample1.wav"></audio></td>
-      <td><audio controls preload="none"><source src="ss/Swar-MV2/sample2.wav"></audio></td>
-      <td><audio controls preload="none"><source src="ss/Swar-MV2/sample3.wav"></audio></td>
-      <td><audio controls preload="none"><source src="ss/Swar-MV2/sample4.wav"></audio></td>
-      <td><audio controls preload="none"><source src="ss/Swar-MV2/sample5.wav"></audio></td>
+      <td><audio controls preload="none"><source src="ss/Swar-M(V2)/sample1.wav"></audio></td>
+      <td><audio controls preload="none"><source src="ss/Swar-M(V2)/sample2.wav"></audio></td>
+      <td><audio controls preload="none"><source src="ss/Swar-M(V2)/sample3.wav"></audio></td>
+      <td><audio controls preload="none"><source src="ss/Swar-M(V2)/sample4.wav"></audio></td>
+      <td><audio controls preload="none"><source src="ss/Swar-M(V2)/sample5.wav"></audio></td>
     </tr>
     <tr>
       <td nowrap>UnivNET</td>
