--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <html lang="en">
 <head>
 <meta charset="utf-8"/>
-<title>SWAR Marathi Vocoder - Audio Samples</title>
+<title>Swar-M: Vocoder for Marathi Language - Audio Samples</title>
 <style>
         body { font-family: Arial, sans-serif; margin: 20px; }
         table { border-collapse: collapse; width: 100%; }
