--- a/index.html
+++ b/index.html
@@ -3,11 +3,11 @@
 <html lang="en">
 <head>
 <meta charset="utf-8"/>
-<title>Swar-M: Vocoder for Marathi Language - Audio Samples</title>
+<title>Swar Marathi - Demos</title>
 <style>
         body { font-family: Arial, sans-serif; margin: 20px; }
         table { border-collapse: collapse; width: 100%; }
-        td { padding: 8px; text-align: center; border: 1px solid #ddd; }
+        td { padding: 8px; text-align: center; border: 0px solid #ddd; }
         td[nowrap] { font-weight: bold; }
         audio { width: 180px; }
     </style>
