--- a/index.html
+++ b/index.html
@@ -28,6 +28,14 @@
 <td>Sample 5</td>
 </tr>
 <tr>
+<td nowrap=""><strong>Transcript</strong></td>
+<td>ओलिताचा कापूस हंगाम अंतिम टप्प्यात असून, कोरडवाहू कापूस वेचणीचा हंगाम अद्याप अर्ध्यातच आहे।</td>
+<td>चर्चेवेळी महिलांनी जे पिण्याचे पाणी आठ दिवसांनी येते ते दूषित पाणी एका बाटलीमध्ये भरून आणले होते।</td>
+<td>चारा लागवड असलेल्या या गावात चारा शेती व्यवस्थापन, कापणी आणि पुरवठा, तसेच मार्केटिंग या कामांसाठी तीन व्यवस्थापन गट तयार केले गेलेत।</td>
+<td>यामुळे गोड्या पाण्याची क्षारता वाढणे, पाणी वस्तीत घुसून स्थलांतर होणे, सखल जमिनीचा नाश आदी धोके संभवतात।</td>
+<td>परिणामी, गेल्यावर्षीच्या तुलनेत यावर्षी पाच जिल्ह्यात तब्बल एक लाख हेक्टरने सोयाबीन लागवड कमी झाल्याचे कृषी विभागाच्या सूत्रांनी सांगितले।</td>
+</tr>
+<tr>
 <td nowrap="">Ground Truth</td>
 <td><audio controls="" preload="none"><source src="ss/GT/IISc_SYSPINProject_mr_f_AGRI_01324.wav"/></audio></td>
 <td><audio controls="" preload="none"><source src="ss/GT/IISc_SYSPINProject_mr_f_AGRI_01315.wav"/></audio></td>
