--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     </style>
 </head>
 <body>
-<h1>Audio Samples - Swar-M: A Vocoder for Marathi</h1>
+<h1>Swar Marathi - Demos</h1>
 <p>Below are representative samples synthesized by different vocoder models on Marathi speech.</p>
 <h2>Sample Set 1</h2>
 <hr/>
