--- a/index.html
+++ b/index.html
@@ -116,6 +116,15 @@
 <td>Sample 5</td>
 </tr>
 <tr>
+<td nowrap=""><strong>Transcript</strong></td>
+<td>शहरातील रस्ते, महामार्ग आदी ठिकाणी पावसाचे पाणी थांबविण्याची अथवा ते जमिनीत मुरविण्याची कोणतीही व्यवस्था आपल्याकडे नाही।</td>
+<td>त्यामुळे बादल्या आणि पाण्याच्या पिंपांच्या झाकणावर पाणी साचणार नाही याची खातरजमा करून, झाडे लावलेल्या कुंड्यांच्या खाली साचणारे अतिरिक्त पाणी काढून टाका।</td>
+<td>त्याचा ढीग रचून ठेवण्यापेक्षा असे नियोजन करता आले तर बरे होईल।</td>
+<td>साल काढून, आंबा कापून चमच्याने कुस्करून घेऊन त्यात रवा टाका आणि मग त्यात तो भिजेल एवढे पाणी टाका।</td>
+<td>द्राक्ष हे फळ सर्वांना आवडते व ते औषधी सुद्धा आहे। द्राक्षे ही स्वादाने मधुर असतात।</td>
+</tr>
+
+<tr>
 <td nowrap="">Ground Truth</td>
 <td><audio controls="" preload="none"><source src="ss/GT/IISc_SYSPINProject_mr_f_AGRI_01302.wav"/></audio></td>
 <td><audio controls="" preload="none"><source src="ss/GT/IISc_SYSPINProject_mr_f_AGRI_01294.wav"/></audio></td>
@@ -195,6 +204,15 @@
 <td>Sample 4</td>
 <td>Sample 5</td>
 </tr>
+<tr>
+<td nowrap=""><strong>Transcript</strong></td>
+<td>ज्या भागात कापूस पिकतो, तिथेच सूत गिरण्यांची निर्मिती होणे सयुक्तिक होते परंतु सूत गिरण्या पश्चिम महाराष्ट्रात निघाल्या।</td>
+<td>पावणेचार फुटांच्या सरीतील खोडवा ऊसाला खत देण्यासाठी हे यंत्र बनवलं गेलं आहे।</td>
+<td>पाणी सोडतेवेळी रस्त्यावरील चावीचे पाणी बंद करेपर्यंत पाणी वाया जाते।</td>
+<td>तसेच दंडवाडी येथे सोयाबीनची आणि बागायती भागातील पिंपळी व काटेवाडी येथील द्राक्ष पिकाची पाहणी जिल्हाधिकाऱ्यांनी केली।</td>
+<td>त्यांनी प्रथम ‘पाणी अडवा, पाणी जिरवा’ मोहीम राबवून गावातील पाण्याचा प्रश्न हाताळला।</td>
+</tr>
+
 <tr>
 <td nowrap="">Ground Truth</td>
 <td><audio controls="" preload="none"><source src="ss/GT/IISc_SYSPINProject_mr_f_AGRI_01288.wav"/></audio></td>
