--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <html lang="en">
 <head>
 <meta charset="utf-8"/>
-<title>Swar Marathi - Demos</title>
+<title>Vaachika Marathi - Demos</title>
 <style>
         body { font-family: Arial, sans-serif; margin: 20px; }
         table { border-collapse: collapse; width: 100%; }
@@ -13,7 +13,7 @@
     </style>
 </head>
 <body>
-<h1>Swar Marathi - Demos</h1>
+<h1>Vaachika Marathi - Demos</h1>
 <p>Below are representative samples synthesized by different vocoder models on Marathi speech.</p>
 <h2>Sample Set 1</h2>
 <hr/>
@@ -85,20 +85,20 @@
 <td><audio controls="" preload="none"><source src="ss/VocGAN/IISc_SYSPINProject_mr_f_AGRI_01303.wav"/></audio></td>
 </tr>
 <tr>
-<td nowrap="">Swar-M(V1)</td>
-<td><audio controls="" preload="none"><source src="ss/Swar-M(V1)/IISc_SYSPINProject_mr_f_AGRI_01324.wav"/></audio></td>
-<td><audio controls="" preload="none"><source src="ss/Swar-M(V1)/IISc_SYSPINProject_mr_f_AGRI_01315.wav"/></audio></td>
-<td><audio controls="" preload="none"><source src="ss/Swar-M(V1)/IISc_SYSPINProject_mr_f_AGRI_01311.wav"/></audio></td>
-<td><audio controls="" preload="none"><source src="ss/Swar-M(V1)/IISc_SYSPINProject_mr_f_AGRI_01305.wav"/></audio></td>
-<td><audio controls="" preload="none"><source src="ss/Swar-M(V1)/IISc_SYSPINProject_mr_f_AGRI_01303.wav"/></audio></td>
+<td nowrap="">Vaachika-M(V1)</td>
+<td><audio controls="" preload="none"><source src="ss/Vaachika-M(V1)/IISc_SYSPINProject_mr_f_AGRI_01324.wav"/></audio></td>
+<td><audio controls="" preload="none"><source src="ss/Vaachika-M(V1)/IISc_SYSPINProject_mr_f_AGRI_01315.wav"/></audio></td>
+<td><audio controls="" preload="none"><source src="ss/Vaachika-M(V1)/IISc_SYSPINProject_mr_f_AGRI_01311.wav"/></audio></td>
+<td><audio controls="" preload="none"><source src="ss/Vaachika-M(V1)/IISc_SYSPINProject_mr_f_AGRI_01305.wav"/></audio></td>
+<td><audio controls="" preload="none"><source src="ss/Vaachika-M(V1)/IISc_SYSPINProject_mr_f_AGRI_01303.wav"/></audio></td>
 </tr>
 <tr>
-<td nowrap="">Swar-M(V2)</td>
-<td><audio controls="" preload="none"><source src="ss/Swar-M(V2)/IISc_SYSPINProject_mr_f_AGRI_01324.wav"/></audio></td>
-<td><audio controls="" preload="none"><source src="ss/Swar-M(V2)/IISc_SYSPINProject_mr_f_AGRI_01315.wav"/></audio></td>
-<td><audio controls="" preload="none"><source src="ss/Swar-M(V2)/IISc_SYSPINProject_mr_f_AGRI_01311.wav"/></audio></td>
-<td><audio controls="" preload="none"><source src="ss/Swar-M(V2)/IISc_SYSPINProject_mr_f_AGRI_01305.wav"/></audio></td>
-<td><audio controls="" preload="none"><source src="ss/Swar-M(V2)/IISc_SYSPINProject_mr_f_AGRI_01303.wav"/></audio></td>
+<td nowrap="">Vaachika-M(V2)</td>
+<td><audio controls="" preload="none"><source src="ss/Vaachika-M(V2)/IISc_SYSPINProject_mr_f_AGRI_01324.wav"/></audio></td>
+<td><audio controls="" preload="none"><source src="ss/Vaachika-M(V2)/IISc_SYSPINProject_mr_f_AGRI_01315.wav"/></audio></td>
+<td><audio controls="" preload="none"><source src="ss/Vaachika-M(V2)/IISc_SYSPINProject_mr_f_AGRI_01311.wav"/></audio></td>
+<td><audio controls="" preload="none"><source src="ss/Vaachika-M(V2)/IISc_SYSPINProject_mr_f_AGRI_01305.wav"/></audio></td>
+<td><audio controls="" preload="none"><source src="ss/Vaachika-M(V2)/IISc_SYSPINProject_mr_f_AGRI_01303.wav"/></audio></td>
 </tr>
 </tbody>
 </table>
@@ -174,20 +174,20 @@
 <td><audio controls="" preload="none"><source src="ss/VocGAN/IISc_SYSPINProject_mr_f_AGRI_01289.wav"/></audio></td>
 </tr>
 <tr>
-<td nowrap="">Swar-M(V1)</td>
-<td><audio controls="" preload="none"><source src="ss/Swar-M(V1)/IISc_SYSPINProject_mr_f_AGRI_01302.wav"/></audio></td>
-<td><audio controls="" preload="none"><source src="ss/Swar-M(V1)/IISc_SYSPINProject_mr_f_AGRI_01294.wav"/></audio></td>
-<td><audio controls="" preload="none"><source src="ss/Swar-M(V1)/IISc_SYSPINProject_mr_f_AGRI_01293.wav"/></audio></td>
-<td><audio controls="" preload="none"><source src="ss/Swar-M(V1)/IISc_SYSPINProject_mr_f_AGRI_01290.wav"/></audio></td>
-<td><audio controls="" preload="none"><source src="ss/Swar-M(V1)/IISc_SYSPINProject_mr_f_AGRI_01289.wav"/></audio></td>
+<td nowrap="">Vaachika-M(V1)</td>
+<td><audio controls="" preload="none"><source src="ss/Vaachika-M(V1)/IISc_SYSPINProject_mr_f_AGRI_01302.wav"/></audio></td>
+<td><audio controls="" preload="none"><source src="ss/Vaachika-M(V1)/IISc_SYSPINProject_mr_f_AGRI_01294.wav"/></audio></td>
+<td><audio controls="" preload="none"><source src="ss/Vaachika-M(V1)/IISc_SYSPINProject_mr_f_AGRI_01293.wav"/></audio></td>
+<td><audio controls="" preload="none"><source src="ss/Vaachika-M(V1)/IISc_SYSPINProject_mr_f_AGRI_01290.wav"/></audio></td>
+<td><audio controls="" preload="none"><source src="ss/Vaachika-M(V1)/IISc_SYSPINProject_mr_f_AGRI_01289.wav"/></audio></td>
 </tr>
 <tr>
-<td nowrap="">Swar-M(V2)</td>
-<td><audio controls="" preload="none"><source src="ss/Swar-M(V2)/IISc_SYSPINProject_mr_f_AGRI_01302.wav"/></audio></td>
-<td><audio controls="" preload="none"><source src="ss/Swar-M(V2)/IISc_SYSPINProject_mr_f_AGRI_01294.wav"/></audio></td>
-<td><audio controls="" preload="none"><source src="ss/Swar-M(V2)/IISc_SYSPINProject_mr_f_AGRI_01293.wav"/></audio></td>
-<td><audio controls="" preload="none"><source src="ss/Swar-M(V2)/IISc_SYSPINProject_mr_f_AGRI_01290.wav"/></audio></td>
-<td><audio controls="" preload="none"><source src="ss/Swar-M(V2)/IISc_SYSPINProject_mr_f_AGRI_01289.wav"/></audio></td>
+<td nowrap="">Vaachika-M(V2)</td>
+<td><audio controls="" preload="none"><source src="ss/Vaachika-M(V2)/IISc_SYSPINProject_mr_f_AGRI_01302.wav"/></audio></td>
+<td><audio controls="" preload="none"><source src="ss/Vaachika-M(V2)/IISc_SYSPINProject_mr_f_AGRI_01294.wav"/></audio></td>
+<td><audio controls="" preload="none"><source src="ss/Vaachika-M(V2)/IISc_SYSPINProject_mr_f_AGRI_01293.wav"/></audio></td>
+<td><audio controls="" preload="none"><source src="ss/Vaachika-M(V2)/IISc_SYSPINProject_mr_f_AGRI_01290.wav"/></audio></td>
+<td><audio controls="" preload="none"><source src="ss/Vaachika-M(V2)/IISc_SYSPINProject_mr_f_AGRI_01289.wav"/></audio></td>
 </tr>
 </tbody>
 </table>
@@ -263,20 +263,20 @@
 <td><audio controls="" preload="none"><source src="ss/VocGAN/IISc_SYSPINProject_mr_f_AGRI_01274.wav"/></audio></td>
 </tr>
 <tr>
-<td nowrap="">Swar-M(V1)</td>
-<td><audio controls="" preload="none"><source src="ss/Swar-M(V1)/IISc_SYSPINProject_mr_f_AGRI_01288.wav"/></audio></td>
-<td><audio controls="" preload="none"><source src="ss/Swar-M(V1)/IISc_SYSPINProject_mr_f_AGRI_01283.wav"/></audio></td>
-<td><audio controls="" preload="none"><source src="ss/Swar-M(V1)/IISc_SYSPINProject_mr_f_AGRI_01281.wav"/></audio></td>
-<td><audio controls="" preload="none"><source src="ss/Swar-M(V1)/IISc_SYSPINProject_mr_f_AGRI_01278.wav"/></audio></td>
-<td><audio controls="" preload="none"><source src="ss/Swar-M(V1)/IISc_SYSPINProject_mr_f_AGRI_01274.wav"/></audio></td>
+<td nowrap="">Vaachika-M(V1)</td>
+<td><audio controls="" preload="none"><source src="ss/Vaachika-M(V1)/IISc_SYSPINProject_mr_f_AGRI_01288.wav"/></audio></td>
+<td><audio controls="" preload="none"><source src="ss/Vaachika-M(V1)/IISc_SYSPINProject_mr_f_AGRI_01283.wav"/></audio></td>
+<td><audio controls="" preload="none"><source src="ss/Vaachika-M(V1)/IISc_SYSPINProject_mr_f_AGRI_01281.wav"/></audio></td>
+<td><audio controls="" preload="none"><source src="ss/Vaachika-M(V1)/IISc_SYSPINProject_mr_f_AGRI_01278.wav"/></audio></td>
+<td><audio controls="" preload="none"><source src="ss/Vaachika-M(V1)/IISc_SYSPINProject_mr_f_AGRI_01274.wav"/></audio></td>
 </tr>
 <tr>
-<td nowrap="">Swar-M(V2)</td>
-<td><audio controls="" preload="none"><source src="ss/Swar-M(V2)/IISc_SYSPINProject_mr_f_AGRI_01288.wav"/></audio></td>
-<td><audio controls="" preload="none"><source src="ss/Swar-M(V2)/IISc_SYSPINProject_mr_f_AGRI_01283.wav"/></audio></td>
-<td><audio controls="" preload="none"><source src="ss/Swar-M(V2)/IISc_SYSPINProject_mr_f_AGRI_01281.wav"/></audio></td>
-<td><audio controls="" preload="none"><source src="ss/Swar-M(V2)/IISc_SYSPINProject_mr_f_AGRI_01278.wav"/></audio></td>
-<td><audio controls="" preload="none"><source src="ss/Swar-M(V2)/IISc_SYSPINProject_mr_f_AGRI_01274.wav"/></audio></td>
+<td nowrap="">Vaachika-M(V2)</td>
+<td><audio controls="" preload="none"><source src="ss/Vaachika-M(V2)/IISc_SYSPINProject_mr_f_AGRI_01288.wav"/></audio></td>
+<td><audio controls="" preload="none"><source src="ss/Vaachika-M(V2)/IISc_SYSPINProject_mr_f_AGRI_01283.wav"/></audio></td>
+<td><audio controls="" preload="none"><source src="ss/Vaachika-M(V2)/IISc_SYSPINProject_mr_f_AGRI_01281.wav"/></audio></td>
+<td><audio controls="" preload="none"><source src="ss/Vaachika-M(V2)/IISc_SYSPINProject_mr_f_AGRI_01278.wav"/></audio></td>
+<td><audio controls="" preload="none"><source src="ss/Vaachika-M(V2)/IISc_SYSPINProject_mr_f_AGRI_01274.wav"/></audio></td>
 </tr>
 </tbody>
 </table>
